Add Filter component

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
   --color-background: #ffffff;
   --color-primary: #283ad9;
   --color-text: #333333;
-  --color-primary-muted: rgba(40, 58, 217, 0.15);
+  --color-primary-muted: #dfe2fa;
   --color-text-muted: #595959;
   --color-hover: rgba(0, 0, 0, 0.05);
   --color-time-0: #f20089;
