--- a/src/styles.css
+++ b/src/styles.css
@@ -35,5 +35,5 @@ h1 {
 h2 {
   font-size: var(--font-size-2);
   font-weight: bold;
-  margin: 0 0 var(--space-3);
+  margin: var(--space-3) 0 var(--space-3);
 }
