--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 :root {
   --color-background: #ffffff;
   --color-primary: #283ad9;
+  --color-error: #e60026;
   --color-text: #333333;
   --color-primary-muted: #dfe2fa;
+  --color-error-muted: #fbd9df;
   --color-text-muted: #595959;
   --color-hover: rgba(0, 0, 0, 0.05);
   --color-time-0: #f20089;
